# HEPHROSE-CLOTHING-CHATBOT

./: README.md
HEPHROSE CLOTHINGS/: chatbot.ipynb  main.py  pyproject.toml
HEPHROSE CLOTHINGS/Resources/: summary.txt
